[tool.poetry]
name = "moringmarkarchive"
version = "0.1.0"
description = ""
authors = ["Grzegorz Koperwas <admin@grzegorzkoperwas.site>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.4.2"
praw = "^7.7.1"
requests = "^2.31.0"
parameterized = "^0.9.0"
pillow = "^10.3.0"
boto3 = "^1.34.103"

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
