[tool.poetry]
name = "moringmarkarchive"
version = "0.1.0"
description = ""
authors = ["Grzegorz Koperwas <admin@grzegorzkoperwas.site>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.4.2"
praw = "^7.7.1"
requests = "^2.31.0"
parameterized = "^0.9.0"
pillow = "^10.3.0"
boto3 = "^1.34.103"
httpx = "^0.27.0"
aiofiles = "^23.2.1"
lark = "^1.2.2"
prompt-toolkit = "^3.0.47"
term-image = "^0.7.2"
piccolo = {extras = ["sqlite"], version = "^1.22.0"}
h2 = "^4.1.0"
beautifulsoup4 = "^4.12.3"

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.5"
ipython = "^8.30.0"
litecli = "^1.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
