[tool.poetry]
name = "moringmarkarchive"
version = "0.1.0"
description = ""
authors = ["Grzegorz Koperwas <admin@grzegorzkoperwas.site>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.12.0"
praw = "^7.7.1"
requests = "^2.32.4"
parameterized = "^0.9.0"
pillow = "^11"
boto3 = "^1.34.103"
httpx = "^0.27.0"
aiofiles = "^23.2.1"
lark = "^1.2.2"
prompt-toolkit = "^3.0.47"
term-image = {git = "https://github.com/AnonymouX47/term-image.git"}
piccolo = {extras = ["sqlite"], version = "^1.22.0"}
h2 = "^4.3.0"
beautifulsoup4 = "^4.12.3"

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.5"
ipython = "^8.30.0"
litecli = "^1.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
